Fixed appearance of testimonial images on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -81,6 +81,7 @@ section.success h2 {
 .testimonial-item img {
   display: inline-block;
   padding: 0;
+  margin-bottom: 2em;
 }
 
 .testimonial-item__name {
